--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </a>
             </div>
 
-            <a href="https://1drv.ms/w/c/299f8b8eec21ef0c/Ec2qcpKfFKRCnaD9qTKwuP0BYRR3gLihAgHAz_uZNEfKcQ?e=hQ2zRH"btn" target="_blank">Download CV</a>
+            <a href="https://1drv.ms/w/c/299f8b8eec21ef0c/Ec2qcpKfFKRCnaD9qTKwuP0BYRR3gLihAgHAz_uZNEfKcQ?e=hQ2zRH" class="btn" target="_blank">Download CV</a>
         </div>
 
         <div class="home-img">
@@ -205,3 +205,4 @@
 </body>
 
 </html>
+
